// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TermToggleGroupFilter render - active 1`] = `
<div
  class="euiFilterButton__wrapper css-nbqv3o-wrapper-withNext-hasToggle"
>
  <button
    aria-pressed="true"
    class="euiButtonGroupButton euiButtonGroupButton-isSelected euiFilterButton euiFilterButton-isSelected euiFilterButton-hasActiveFilters euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-fill-text-euiFilterButton-hasActiveFilters-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
        data-text="Kibana"
        title="Kibana"
      >
        Kibana
      </span>
    </span>
  </button>
</div>
`;

exports[`TermToggleGroupFilter render - active negated - custom negated name 1`] = `
<div
  class="euiFilterButton__wrapper css-nbqv3o-wrapper-withNext-hasToggle"
>
  <button
    aria-pressed="true"
    class="euiButtonGroupButton euiButtonGroupButton-isSelected euiFilterButton euiFilterButton-isSelected euiFilterButton-hasActiveFilters euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-fill-text-euiFilterButton-hasActiveFilters-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
        data-text="-Kibana"
        title="-Kibana"
      >
        -Kibana
      </span>
    </span>
  </button>
</div>
`;

exports[`TermToggleGroupFilter render - active negated 1`] = `
<div
  class="euiFilterButton__wrapper css-nbqv3o-wrapper-withNext-hasToggle"
>
  <button
    aria-pressed="true"
    class="euiButtonGroupButton euiButtonGroupButton-isSelected euiFilterButton euiFilterButton-isSelected euiFilterButton-hasActiveFilters euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-fill-text-euiFilterButton-hasActiveFilters-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
        data-text="Not Kibana"
        title="Not Kibana"
      >
        Not Kibana
      </span>
    </span>
  </button>
</div>
`;

exports[`TermToggleGroupFilter renders 1`] = `
<div
  class="euiFilterButton__wrapper css-nbqv3o-wrapper-withNext-hasToggle"
>
  <button
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
        data-text="Kibana"
        title="Kibana"
      >
        Kibana
      </span>
    </span>
  </button>
</div>
`;
